@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Fixed Mmrnmhrm's X-Form transformation without energy use (bug #1004) - Alex
 - Added missing sleeps in DoInput() functions (bug #893) - Alex
 - Starmap unit conversion corrections; fixes bug #970 - Alex
 - Rounding-error correction in log(x|y)ToUniverse (bug #1046), from Nic
